--- a/ekeko.chat.html
+++ b/ekeko.chat.html
@@ -6,7 +6,7 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'c73ffbadc28c45099b59a2c984a114c3',
         apiUrl: 'https://ekeko.pl.bugfocus.com/clientweb/api/v1',
-        tenantUrl: 'ekeko.pl.bugfocus.com',
+        tenantUrl: 'example1.com',
         chatPath: 'https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
