--- a/ekeko.chat.html
+++ b/ekeko.chat.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://example1.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'f2550555cc104575a366b1eb55a7e2a9',
-        apiUrl: 'https://ekeko.pl.bugfocus.com/clientweb/api/v1',
+        apiUrl: 'https://example1.com/clientweb/api/v1',
         tenantUrl: 'example1.com',
-        chatPath: 'https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/'
+        chatPath: 'https://example1.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -18,4 +18,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://example1.com/clientweb/chat-client-v4/js/init.js"></script> 
