--- a/ekeko.chat.html
+++ b/ekeko.chat.html
@@ -4,9 +4,9 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <link type="text/css" rel="stylesheet" href="https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: 'f2550555cc104575a366b1eb55a7e2a9',
+        appId: 'a25a6dce596d43559b9b5c5cc1244689',
         apiUrl: 'https://ekeko.pl.bugfocus.com/clientweb/api/v1',
-        tenantUrl: 'example1.com',
+        tenantUrl: 'ekeko.pl.bugfocus.com',
         chatPath: 'https://ekeko.pl.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
