--- a/test.bugfocus.html
+++ b/test.bugfocus.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://open1.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://test.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: 'a04e5b575d4d4731be444748491ad987',
-        apiUrl: 'https://open1.pl.bugfocus.com/clientweb/api/v1',
+        apiUrl: 'https://test.bugfocus.com/clientweb/api/v1',
         tenantUrl: 'test.bugfocus.com',
-        chatPath: 'https://open1.pl.bugfocus.com/clientweb/chat-client-v4/'
+        chatPath: 'https://test.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -18,4 +18,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         */
     };
 </script>
-<script src="https://open1.pl.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://test.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
