--- a/qa-ol1.chat.html
+++ b/qa-ol1.chat.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://qa-ol1.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://lea-ol1.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '74ea25d6907442ea9b757708f19723d1',
-        apiUrl: 'https://qa-ol1.pl.bugfocus.com/clientweb/api/v1',
-        tenantUrl: 'qa-ol1.bugfocus.com',
-        chatPath: 'https://qa-ol1.pl.bugfocus.com/clientweb/chat-client-v4/'
+        appId: '2b03ba929c244c8e82d562d6af42f21b',
+        apiUrl: 'https://lea-ol1.pl.bugfocus.com/clientweb/api/v1',
+        tenantUrl: 'vladlena.com',
+        chatPath: 'https://lea-ol1.pl.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -18,4 +18,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
         */
     };
 </script>
-<script src="https://qa-ol1.pl.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://lea-ol1.pl.bugfocus.com/clientweb/chat-client-v4/js/init.js"></script> 
