--- a/qa-ol1.chat.html
+++ b/qa-ol1.chat.html
@@ -4,9 +4,9 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 <link type="text/css" rel="stylesheet" href="https://qa-ol1.pl.bugfocus.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '2a6977b16633433e9a8bf50119846213',
+        appId: '82bd52c2174c42c0be8fe6748ed9cf92',
         apiUrl: 'https://qa-ol1.pl.bugfocus.com/clientweb/api/v1',
-        tenantUrl: 'vladlena.com',
+        tenantUrl: 'qa-ol1.bugfocus.com',
         chatPath: 'https://qa-ol1.pl.bugfocus.com/clientweb/chat-client-v4/'
 
         /*        
